# mydegirostocks

./: .gitignore  README.md  app.py  package.json  pyproject.toml  tailwind.config.js
assets/: input.css  styles.css
callbacks/: __init__.py  callbacks.py
components/: __init__.py  data_table.py  upload_area.py
model/: daily_balance.ipynb  functions.ipynb  test.py
pages/: __init__.py  home.py
